fix: vertically align the Link on the button

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -66,7 +66,9 @@ under the words. Here's also where the transition speed is set.
     color: #fff;
     display: flex;
     justify-content: center;
-    margin-top: 0.4em;
+    align-items: center;
+    height: 100%;
+    line-height: 40px;
     font-weight: 100;
     font-size: 1.1em;
 }
